--- a/www/index.html
+++ b/www/index.html
@@ -603,7 +603,7 @@
 	</ul>
 </script>
 
-        <!--<script src="cordova.js"></script>-->
+        <script src="cordova.js"></script>
 		<script src="lib/jquery.min.js"></script>
 		<script src="lib/jquery.mobile-1.4.5.min.js"></script>
 		<script src="lib/photoswipe.min.js"></script>
