--- a/www/index.html
+++ b/www/index.html
@@ -251,8 +251,8 @@
 					<p>เหยี่ยวอพยพ 6 ชนิดหลักในประเทศไทยและภูมิภาคเอเชียตะวันออกเฉียงใต้/อุษาคเนย์</p>
 					<div class="gallery-list ui-grid-a">
 						<div class="ui-block-a"><a href="img/cartoons/black-baza.jpg" data-w="1275" data-h="960" title="Black Baza"><img src="img/cartoons/black-baza.jpg" /></a></div>
-						<div class="ui-block-b"><a href="img/cartoons/ohb.jpg" data-w="792" data-h="834" title="Oriental Honey-buzzard"><img src="img/cartoons/ohb.jpg" /></a></div>
-						<div class="ui-block-a"><a href="img/cartoons/shikra.jpg" data-w="1091" data-h="932" title="Shikra"><img src="img/cartoons/shikra.jpg" /></a></div>
+						<div class="ui-block-b"><a href="img/cartoons/ohb-2.jpg" data-w="792" data-h="834" title="Oriental Honey-buzzard"><img src="img/cartoons/ohb-2.jpg" /></a></div>
+						<div class="ui-block-a"><a href="img/cartoons/shikra-2.jpg" data-w="1091" data-h="932" title="Shikra"><img src="img/cartoons/shikra-2.jpg" /></a></div>
 						<div class="ui-block-b"><a href="img/cartoons/chinese-goshawk.jpg" data-w="1066" data-h="930" title="Chinese Sparrowhawk"><img src="img/cartoons/chinese-goshawk.jpg" /></a></div>
 						<div class="ui-block-a"><a href="img/cartoons/japanese-sparrowhawk.jpg" data-w="1330" data-h="892" title="Japanese Sparrowhawk"><img src="img/cartoons/japanese-sparrowhawk.jpg" /></a></div>
 						<div class="ui-block-b"><a href="img/cartoons/grey-faced-buzzard.jpg" data-w="918" data-h="902" title="Grey-faced Buzzard"><img src="img/cartoons/grey-faced-buzzard.jpg" /></a></div>
@@ -440,7 +440,7 @@
 				<h2>Thai Raptor Guide</h2>
 			</div>
 			<div role="main" class="ui-content">
-				<h2 class="ui-bar ui-bar-f">About (version Beta 0.5.1)</h2>
+				<h2 class="ui-bar ui-bar-f">About (version Beta 0.5.2)</h2>
 				<div class="content-page ui-body ui-body-f ui-corner-all">
 					<p><strong>กลุ่มศึกษาเหยี่ยวและนกอินทรีในประเทศไทย (Thai Raptor Group)</strong> เป็นหน่วยงานไม่แสวงหาผลกำไร ที่เกิดจากการรวมตัวของนักดูนกอาสาสมัคร สำรวจข้อมูลของนกนักล่าในธรรมชาติ เพื่อเผยแพร่สร้างความตระหนักและความเข้าใจที่ถูกต้องต่อนกนักล่าที่มีหน้ารักษาสมดุลของระบบนิเวศ ควบคุมจำนวนของสัตว์ต่างๆ มิให้มีประชากรล้นเกินจนอาจส่งผลกระทบต่อมนุษย์ และส่งเสริมการเข้าหาธรรมชาติด้วยการเรียนรู้เกี่ยวกับนกนักล่าในธรรมชาติผ่านทางกิจกรรมดูนกและนกนักล่า โดยไม่สนับสนุนการเลี้ยงนกนักล่าหรือนกในธรรมชาติซึ่งเป็นสัตว์ป่าคุ้มครองตามกฏหมาย</p>
 					
