--- a/www/index.html
+++ b/www/index.html
@@ -434,9 +434,26 @@
 		
 		</div>
 
-		<div data-role="page" id="aboutPage">
+		<div data-role="page" id="sightingsPage">
 			<div data-role="header" data-position="fixed">
 				<a data-iconpos="notext" href="#menupanel10" data-role="button" data-icon="flat-menu"></a>	
+				<h2>Thai Raptor Guide</h2>
+			</div>
+			<div role="main" class="ui-content">
+				<h2 class="ui-bar ui-bar-f">Sightings</h2>
+				<div class="content-page ui-body ui-body-f ui-corner-all">
+					<p>Report sightings of raptors in Thailand (species, date, locality, bahavior, number of birds, photograph if available) to <a href="mailto:raptor@BirdsofThailand.org">raptor@BirdsofThailand.org</a>. Notable sightings will be archived on Siam Avifauna <a href="http://www.BirdsofThailand.org" target="_blank">www.BirdsofThailand.org</a> for public access.</p>
+				</div>
+			</div>
+			
+			<div class="left-menu" data-role="panel" id="menupanel10" data-position="left" data-theme="a" data-display="push" data-position-fixed="true">
+			</div>
+		
+		</div>
+		
+		<div data-role="page" id="aboutPage">
+			<div data-role="header" data-position="fixed">
+				<a data-iconpos="notext" href="#menupanel11" data-role="button" data-icon="flat-menu"></a>	
 				<h2>Thai Raptor Guide</h2>
 			</div>
 			<div role="main" class="ui-content">
@@ -460,7 +477,7 @@
 				</div>
 			</div>
 			
-			<div class="left-menu" data-role="panel" id="menupanel10" data-position="left" data-theme="a" data-display="push" data-position-fixed="true">
+			<div class="left-menu" data-role="panel" id="menupanel11" data-position="left" data-theme="a" data-display="push" data-position-fixed="true">
 			</div>
 		
 		</div>		
@@ -599,6 +616,7 @@
 		<li><a href="#contributorsPage" data-transition="slide">Contributors</a></li>
 		<li><a href="#helpRaptorsPage" data-transition="slide">Help Raptors</a></li>
 		<li><a href="#booksPage" data-transition="slide">Books</a></li>
+		<li><a href="#sightingsPage" data-transition="slide">Sightings</a></li>
 		<li><a href="#aboutPage" data-transition="slide">About</a></li>
 	</ul>
 </script>
