--- a/www/index.html
+++ b/www/index.html
@@ -459,7 +459,7 @@
 				<h2>Thai Raptor Guide</h2>
 			</div>
 			<div role="main" class="ui-content">
-				<h2 class="ui-bar ui-bar-f">About (version Beta 0.6.0)</h2>
+				<h2 class="ui-bar ui-bar-f">About (version Beta 0.6.1)</h2>
 				<div class="content-page ui-body ui-body-f ui-corner-all">
 					<p><strong>กลุ่มศึกษาเหยี่ยวและนกอินทรีในประเทศไทย (Thai Raptor Group)</strong> เป็นหน่วยงานไม่แสวงหาผลกำไร ที่เกิดจากการรวมตัวของนักดูนกอาสาสมัคร สำรวจข้อมูลของนกนักล่าในธรรมชาติ เพื่อเผยแพร่สร้างความตระหนักและความเข้าใจที่ถูกต้องต่อนกนักล่าที่มีหน้ารักษาสมดุลของระบบนิเวศ ควบคุมจำนวนของสัตว์ต่างๆ มิให้มีประชากรล้นเกินจนอาจส่งผลกระทบต่อมนุษย์ และส่งเสริมการเข้าหาธรรมชาติด้วยการเรียนรู้เกี่ยวกับนกนักล่าในธรรมชาติผ่านทางกิจกรรมดูนกและนกนักล่า โดยไม่สนับสนุนการเลี้ยงนกนักล่าหรือนกในธรรมชาติซึ่งเป็นสัตว์ป่าคุ้มครองตามกฏหมาย</p>
 					
@@ -468,7 +468,7 @@
 					<br />
 					ดูแลโดยคณะสัตวแพทยศาสตร์ มหาวิทยาลัยเกษตรศาสตร์<br />
 					ที่ปรึกษา <br />
-					1. ดร.เกษม สนิทวงศ์ ณ อยุธยา<br />
+					1. คุณเกษม สนิทวงศ์ ณ อยุธยา<br />
 					2. ศาสตราจารย์ นายสัตวแพทย์ ดร.อภินันท์ สุประเสริฐ คณบดีคณะสัตวแพทยศาสตร์<br />
 					คณะกรรมการกองทุน :<br />
 					1. นายสัตวแพทย์ ดร.ไชยยันต์ เกษรดอกบัว<br />
